_src/less/partial/navigation.less
//
#layout {
  position: relative;
  padding-left: 0;
  left: 0;
  transition: all 0.2s ease-out;
}
#layout.active {
  //left: 100px;
  //transition: all 0.7s ease-out;
}
#layout.active #menu {
  left: 200px;
  width: 200px;
  transition: all 0.2s ease-out;
}
#layout.active .site-nav-trigger {
  left: 215px;

  span {
    background-color: @red;
    -webkit-transform: rotate(45deg);
    -webkit-transform-origin: center center;
    transition: 0.5s;
  }
  
  span:before {
    background: @red;
    -webkit-transform: rotate(-90deg) translateY(0px) translateX(6px);
    -webkit-transform-origin: center center;
    transition: 0.5s;
  }
  
  span:after {
    -webkit-transform: none;
    opacity: 0;
    transition: 0.1s;
  }
  
  
}

#layout.active .nav-link {
  -webkit-transform: translate(-20px) rotateY(0deg);
  transition: 0.5s;
}

//
#menu {
  margin: 0 0 0 -201px;
  padding: 100px 0 0 0;
  width: 200px;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 9999;
  //background: darken(@black, 2%);
  background: @blue;
  border-right: 1px solid @white;
  transition: all 0.2s ease-out;
}

// links within the menu
.site-nav-list {
  margin: 0;
  padding: 0;
}
  
  .site-nav-item {
    list-style: none;
    margin: @base-padding 0;
  }
  
    .nav-link {
  
      display: inline-block;
      text-align: center;
      text-transform: uppercase;
      color: @blue !important;
      margin: 0 auto;
      padding: 3px 25px 3px 100px;
      background: @white;
      -webkit-transform: translate(-200px) rotateY(90deg);
      -webkit-transform-origin: left center;
      transition: 0.2s;
      
      // special styles for the username link
      &.username {
        color: @white !important;
        background: @orange;
      }
    
      // special styles for the sign out link
      &.sign-out {
        color: @white !important;
        background: @red;
      }
  
      &:hover {
        -webkit-transform: translate(0px) !important;
      }
  
    }

// navigation trigger button
.site-nav-trigger {
  
  top: 215px;
  left: 15px;
  height: 50px;
  width: 50px;
  background: @white;
  font-size: 10px;
  z-index: 10;
  position: fixed;
  display: block; 
  transition: 0.2s;

  &:hover,
  &:focus {
    -webkit-transform: translateY(-2px);
  }
  
  span {
    position: relative;
    display: block;
  }

  span,
  span:before,
  span:after {
    top: 25px;
    background-color: @blue;
    width: 20px;
    margin: 0 auto;
    height: 0.1em;
    transition: 0.5s;
  }

  span:before,
  span:after {
    position: absolute;
    top: 6px;
    content: " ";
    transition: 0.5s;
  }
  
  span:after {
    top: -6px;
    transition: 0.1s;
  }
  
}

